# Raylib-Modular-Template

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
App/: CMakeLists.txt
App/include/: App.h  Game.h  GameLayer.h  MenuLayer.h
App/include/Layers/: GameLayer.h  MenuLayer.h
App/src/: App.cpp  Game.cpp  GameLayer.cpp  MenuLayer.cpp  main.cpp
App/src/Layers/: GameLayer.cpp  MenuLayer.cpp
lib/: CMakeLists.txt
lib/Core/include/: Layer.h  LayerStack.h
lib/Core/src/: Event.cpp  Layer.cpp  LayerStack.cpp
lib/Engine/: CMakeLists.txt
lib/Engine/include/Core/: Event.h  Layer.h  LayerStack.h  Logging.h
lib/Engine/include/GUI/: Button.h
lib/Engine/include/pch/: Precompiled.h
lib/Engine/src/Core/: Event.cpp  Layer.cpp  LayerStack.cpp  Logging.cpp
lib/Engine/src/GUI/: Button.cpp
lib/GUI/: CMakeLists.txt
lib/GUI/include/: Button.h
lib/GUI/src/: Button.cpp
lib/Layers/: CMakeLists.txt
lib/Layers/include/: Event.h  Layer.h  LayerStack.h
lib/Layers/src/: Layer.cpp  LayerStack.cpp
lib/pch/: Precompiled.h
